Rebrand as SENAI Agenda IA case study
